# mAIl

./: .env.example  .env.multi.prod.example  .env.multi.test.example  .env.test.example  .gitignore  CHANGELOG.md  Makefile  README.md  com.mailai.multi.plist.template  com.mailai.plist.template  com.salonbw.mailai.multi.plist.template  com.salonbw.mailai.plist.template  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: ai-branch-sweep.yml
config/: mailboxes.example.json
dashboards/: grafana-mailai-overview-v2.json
docs/: architecture.md  audit_report_2026_03_30.md  continuation-handoff.md  diff-audit-2026-03-31.md  error-handling-architecture.md  first-dry-run-checklist.md  launchd-setup.md  mail-server-audit-2026-03-31.md  multi-mailbox-operations.md  multi-prod-cutover.md  ollama-mlx-evaluation-2026-03-31.md  openbrain-export-email-encoding-fix.md  pilot-runbook.md  project-done-checklist.md  quality-review-checklist.md  recovery-runbook.md  rollout-plan.md  uncertain-remediation-2026-03-31.md
mail_ai_agent/: __init__.py
scripts/: ai_branch_sweep.sh  bootstrap.sh  prod_alert.sh  prod_canary.sh  prod_healthcheck.sh  prod_metrics.sh
src/mail_ai_agent/: __init__.py  admin_mailbox_cli.py  admin_notify_cli.py  alert_cli.py  apply_quality_patch_cli.py  async_llm_gateway.py  audit_context.py  audit_logger.py  circuit_breaker.py  cleanup_cli.py  cleanup_manager.py  cli.py  config.py  constants.py  db_pool.py  decision_engine.py  draft_store.py  email_parser.py  folder_mapper.py  golden_set_cli.py  healthcheck_cli.py  historical_backfill_cli.py  imap_client.py  llm_gateway.py  main.py  maintenance.py  maintenance_cli.py  manifest_secrets_cli.py  message_processor.py  message_processor_v2.py  metrics_bridge.py  metrics_exporter.py  migrate_audit_log_cli.py  preflight_cli.py  provision_folders_cli.py  quality_learning_cli.py  quality_report.py  quality_report_cli.py  report_cli.py  reporting.py  (+14 more)
tests/: benchmark_lock.py
tests/integration/: test_imap_live.py  test_ollama_live.py
tests/synthetic_data/: final_acceptance_batch_001.json  golden_batch_001.json  validation_batch_001.json
tests/unit/: test_admin_mailbox_cli.py  test_admin_notify_cli.py  test_alert_cli.py  test_apply_quality_patch_cli.py  test_async_llm.py  test_audit_logger.py  test_audit_logger_thread_safety.py  test_bootstrap_script_presence.py  test_circuit_breaker.py  test_cleanup_and_review.py  test_cleanup_cli.py  test_config.py  test_db_pool_resource_leak.py  test_decision_engine.py  test_draft_store.py  test_email_parser.py  test_encoding_error_handling.py  test_fake_repositories_thread_safety.py  test_fake_state_manager.py  test_folder_mapper.py  test_golden_set_cli.py  test_healthcheck_cli.py  test_historical_backfill_cli.py  test_imap_client.py  test_launchd_artifacts.py  test_llm_gateway.py  test_main_orchestrator_improved.py  test_main_workflow.py  test_maintenance.py  test_manifest_secrets_cli.py  test_manifest_secrets_cli_secure.py  test_message_processor_v2.py  test_metrics_bridge.py  test_metrics_exporter.py  test_migrate_audit_log_cli.py  test_normalize_body.py  test_pipeline.py  test_preflight_cli.py  test_provision_folders_cli.py  test_quality_learning_cli.py  (+17 more)
(+12 files in other folders)
