[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-ai-agent"
version = "0.1.0"
description = "Local AI mail triage worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "requests>=2.31,<3",
  "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "mypy>=1.9",
]

[project.scripts]
mail-ai-admin-mailbox = "mail_ai_agent.admin_mailbox_cli:main"
mail-ai-admin-notify = "mail_ai_agent.admin_notify_cli:main"
mail-ai-historical-backfill = "mail_ai_agent.historical_backfill_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["tests/"]
