[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-ai-agent"
version = "0.1.0"
description = "Local AI mail triage worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "requests>=2.31,<3",
  "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=0.23,<1",
  "mypy>=1.9",
]

[project.scripts]
mail-ai-apply-quality-patch = "mail_ai_agent.apply_quality_patch_cli:main"
mail-ai-admin-mailbox = "mail_ai_agent.admin_mailbox_cli:main"
mail-ai-admin-notify = "mail_ai_agent.admin_notify_cli:main"
mail-ai-historical-backfill = "mail_ai_agent.historical_backfill_cli:main"
mail-ai-migrate-audit-log = "mail_ai_agent.migrate_audit_log_cli:main"
mail-ai-provision-folders = "mail_ai_agent.provision_folders_cli:main"
mail-ai-quality-learning = "mail_ai_agent.quality_learning_cli:main"
mail-ai-sieve-unify = "mail_ai_agent.sieve_unify_cli:main"
mail-ai-sieve-deploy = "mail_ai_agent.sieve_deploy_cli:main"
mail-ai-weekly-autotune = "mail_ai_agent.weekly_autotune_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
  "asyncio: marks tests that require pytest-asyncio event loop support",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["tests/"]
